@@ -8,7 +8,6 @@ import com.mygdx.game.model.network.massage.serverResponse.ServerResponse;
 import com.mygdx.game.model.network.massage.serverResponse.gameResponse.ActionResponse;
 import com.mygdx.game.model.network.massage.serverResponse.gameResponse.ActionResponseType;
 import com.mygdx.game.model.network.massage.serverResponse.gameResponse.PlayCardResponse;
-import com.mygdx.game.model.network.massage.serverResponse.gameResponse.PlayTurnPermission;
 import com.mygdx.game.model.user.Player;
 
 import java.util.ArrayList;
@@ -18,21 +17,34 @@ import java.util.function.BiFunction;
 public enum CardSelectHandler {
     MEDIC((cardSelectionAnswer, player) -> {
         List<AbstractCard> abstractCards = cardSelectionAnswer.getSelection();
-        //if(abstractCards.size() != 1) return new ServerResponse(new InvalidRequestException());
+        if(abstractCards.isEmpty()) {
+            player.getGame().switchTurn();
+            return new PlayCardResponse(player.getGame());
+        }
+//        if(abstractCards.size() != 1) return null;
 
         player.getGame().switchTurn();
+        player.getGame().setCardSelectHandler(null);
         return ((PlayableCard)abstractCards.getFirst()).revive();
     }),
     ERIDIN_DESTROYER_ADD((cardSelectionAnswer, player) -> {
         List<AbstractCard> abstractCards = cardSelectionAnswer.getSelection();
+        if(abstractCards.isEmpty()) {
+            player.getGame().switchTurn();
+            return new PlayCardResponse(player.getGame());
+        }
         //if(abstractCards.size() != 1) return new ServerResponse(new InvalidRequestException());
 
         player.getDeckAsCards().add(abstractCards.getFirst());
-        player.getGame().switchTurn();
+        player.getGame().setCardSelectHandler(null);
         return new PlayCardResponse(player.getGame(), null);
     }),
     ERIDIN_DESTROYER_DISCARD(((cardSelectionAnswer, player) -> {
         List<AbstractCard> abstractCards = cardSelectionAnswer.getSelection();
+        if(abstractCards.isEmpty()) {
+            player.getGame().switchTurn();
+            return new PlayCardResponse(player.getGame());
+        }
         //if(abstractCards.size() != 2) return new ServerResponse(new InvalidRequestException());
 
         for(AbstractCard card : abstractCards) {
@@ -40,24 +52,30 @@ public enum CardSelectHandler {
         }
 
         player.getGame().setCardSelectHandler(ERIDIN_DESTROYER_ADD);
-        RequestHandler.allUsers.get(player.getUsername()).sendMassage(new PlayTurnPermission(player.getGame()));
         return new PlayCardResponse(player.getGame(), new ActionResponse(ActionResponseType.SELECTION, player.getDeckAsCards(), 1));
     })),
     ERIDIN_KING((answer,player) -> {
         List<AbstractCard> abstractCards = answer.getSelection();
+        if(abstractCards.isEmpty()) {
+            player.getGame().switchTurn();
+            return new PlayCardResponse(player.getGame());
+        }
         //if(abstractCards.size() != 1) return new ServerResponse(new InvalidRequestException());
         player.getGame().setCardSelectHandler(null);
-        player.getGame().switchTurn();
-        return abstractCards.get(0).place(answer.getRow(), player);
+        return abstractCards.getFirst().place(3, player);
     }),
     ENEMY_MEDIC((cardSelectionAnswer, player) -> {
         List<AbstractCard> abstractCards = cardSelectionAnswer.getSelection();
+        if(abstractCards.isEmpty()) {
+            player.getGame().switchTurn();
+            return new PlayCardResponse(player.getGame());
+        }
         //if(abstractCards.size() != 1) return new ServerResponse(new InvalidRequestException());
         ArrayList<AbstractCard>discardCards = player.getGame().getGameBoard().getDiscardCards(player.getGame().getOpposition());
         //might get problems due to difference in references, if so work with indexes
         AbstractCard abstractCard = abstractCards.getFirst();
         discardCards.remove(abstractCard);
-        player.getGame().switchTurn();
+        player.getGame().setCardSelectHandler(null);
         return abstractCard.place(abstractCard.getRow(), player);
     });
     private final BiFunction<CardSelectionAnswer, Player, ServerResponse> handler;
